--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 <meta charset="UTF-8"/>
 <title>Tudo Sobre Google Glass</title> 
-<link rel="stylesheet" type="text/css" href="_css/estilo.css"/> 
+<link rel="stylesheet" href="_css/estilo.css"/> 
         </head>
         <body>
             <div id="interface">
@@ -14,15 +14,21 @@
 <h2> A revolução do Google está chegando </h2>
 </hgroup>   
 
-<img src="_imagens/glass-oculos-preto-peq.png"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-<a href="about.html"> Ajuda</a>
+<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/>
+
+    <nav id="menu">
+    <h1> Menu Principal </h1>
+    <ul>
+        <li> <a href="index.html"> Home </a> </li>
+        <li> <a href="specs.html"> Especificações </a> </li>
+        <li> <a href="fotos.html"> Fotos </a></li>
+        <li> <a href="multimidia.html"> Multimídia </a></li>
+        <li> <a href="fale-conosco.html"> Fale conosco </a></li>
+    </ul>
+
+    </nav>
+
 
 
 
@@ -36,15 +42,15 @@ Menu Principal
 </hgroup>
 
 <h2 style= "text-align: center;"> O que é </h2>
-<p> O <b> Google Glass </b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+<p> O <b> Google Glass </b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
 <figure class="foto-legenda">
   
-<img src="_imagens/glass-quadro-homem-mulher.jpg">
-<figcaption>
-    <h2>Google Glass</h2> 
-    Uma nova maneira de ver o mundo
-</figcaption>
+    <img src="_imagens/glass-quadro-homem-mulher.jpg">
+    <figcaption>
+        <h2>Google Glass</h2> 
+        Uma nova maneira de ver o mundo
+    </figcaption>
 </figure>
 
 
